--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,25 +1,22 @@
-FROM debian:bullseye-slim
+FROM ubuntu:22.04
 
-# Install required tools
 RUN apt-get update -y && apt-get install -y \
     build-essential \
+    g++ \
     flex \
     bison \
     byacc \
     sqlite3 \
     libsqlite3-dev \
+    make \
     curl \
-    git \
-    make
+    git
 
-# Set working directory
 WORKDIR /home/minisql
 
-# Copy source code
 COPY . .
 
-# Build the project during image build to avoid runtime compile
+# Compile everything during image build
 RUN cd code && make init && make all
 
-# Start with an interactive shell
 CMD ["/bin/bash"]
