--- a/.dockerignore
+++ b/.dockerignore
@@ -2,19 +2,22 @@
 *.dat
 *.bin
 *.o
-*.out
 *.a
 *.so
-object/
-execs/
+
+# media, IDE, and extras
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.mp4
+*.avi
+*.zip
+*.tar.gz
+*.pdf
 .vscode/
 .cache/
 __pycache__/
 *.pyc
 *.pyo
 build/
-*.zip
-*.tar.gz
-*.mp4
-*.avi
-*.pdf
